--- a/app/src/main/res/layout/activity_rating_reviews.xml
+++ b/app/src/main/res/layout/activity_rating_reviews.xml
@@ -70,6 +70,19 @@
             android:textSize="30sp"
             app:layout_constraintStart_toEndOf="@+id/ratingBar9"
             app:layout_constraintTop_toTopOf="@+id/ratingBar9" />
+
+        <TextView
+            android:id="@+id/tvReviewStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No reviews yet."
+            android:textColor="@color/gray"
+            android:fontFamily="@font/montserrat_medium"
+            android:layout_marginTop="8dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/ratingBar9"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
