--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -32,8 +32,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/account_white" />
-        
-        <com.google.android.material.imageview.ShapeableImageView
+
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageView30"
             android:layout_width="150dp"
             android:layout_height="150dp"
