--- a/app/src/main/res/layout/fragment_rating_review.xml
+++ b/app/src/main/res/layout/fragment_rating_review.xml
@@ -42,12 +42,27 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/textView8" />
 
+    <TextView
+        android:id="@+id/tvReviewStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nothing to show here.\nNo reviews yet."
+        android:paddingTop="20dp"
+        android:gravity="center"
+        android:textColor="@color/gray"
+        android:fontFamily="@font/montserrat_medium"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/ratingBar6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar6" />
 
