--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -15,6 +15,7 @@
             android:textColor="@color/black"
             android:textSize="13sp"
             android:textAlignment="gravity"
+            android:justificationMode="inter_word"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
