--- a/app/src/main/res/layout/activity_genre.xml
+++ b/app/src/main/res/layout/activity_genre.xml
@@ -43,8 +43,8 @@
         android:id="@+id/recyclerViewGenre"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
