--- a/app/src/main/res/layout/activity_shipping.xml
+++ b/app/src/main/res/layout/activity_shipping.xml
@@ -163,11 +163,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:orientation="vertical"
+        app:boxBackgroundMode="none"
         app:endIconDrawable="@drawable/chevron_down"
         app:endIconMode="custom"
-        app:boxBackgroundMode="none"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView28"
         app:layout_constraintTop_toBottomOf="@+id/textView28">
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
@@ -178,10 +177,11 @@
             android:backgroundTint="@color/graybox"
             android:fontFamily="@font/montserrat_medium"
             android:hint="Select City"
+            android:textSize="14sp"
             android:padding="12dp"
             android:textColor="@android:color/black"
             app:layout_constraintStart_toStartOf="@id/textView28"
-            app:layout_constraintTop_toBottomOf="@id/textView28"/>
+            app:layout_constraintTop_toBottomOf="@id/textView28" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
