--- a/app/src/main/res/layout/activity_payment_proof.xml
+++ b/app/src/main/res/layout/activity_payment_proof.xml
@@ -85,8 +85,9 @@
         android:text="Select image"
         android:textAllCaps="false"
         android:background="@drawable/add_to_cart_button"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@android:color/white"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageViewProof" />
@@ -115,8 +116,9 @@
         android:backgroundTint="@color/yellow"
         android:text="Confirm"
         android:textAllCaps="false"
-        android:textColor="@android:color/white"
+        android:textSize="18sp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@id/button8"
         app:layout_constraintStart_toStartOf="@id/button8"
         app:layout_constraintTop_toBottomOf="@+id/button8" />
