--- a/app/src/main/res/layout/viewholder_checkout_confirmation.xml
+++ b/app/src/main/res/layout/viewholder_checkout_confirmation.xml
@@ -20,13 +20,15 @@
         android:id="@+id/textView64"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/montserrat_medium"
         android:text="Title"
         android:textColor="@color/gray"
         android:textSize="15sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView33"
         app:layout_constraintTop_toTopOf="parent" />
 
