--- a/app/src/main/res/layout/activity_delivery_fee.xml
+++ b/app/src/main/res/layout/activity_delivery_fee.xml
@@ -88,7 +88,9 @@
             android:fontFamily="@font/montserrat_medium"
             android:hint="Select City"
             android:padding="12dp"
-            android:textColor="@android:color/black"
+            android:textSize="14sp"
+            android:textColor="@color/gray"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="47dp"
             tools:layout_editor_absoluteY="224dp" />
     </com.google.android.material.textfield.TextInputLayout>
