--- a/app/src/main/res/layout/activity_history_completed.xml
+++ b/app/src/main/res/layout/activity_history_completed.xml
@@ -215,7 +215,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Review Your Items"
-        android:backgroundTint="@color/yellow"
+        android:backgroundTintMode="src_atop"
         android:textColor="@color/white"
         android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="15dp"
