--- a/app/src/main/res/layout/fragment_rating_review.xml
+++ b/app/src/main/res/layout/fragment_rating_review.xml
@@ -50,6 +50,7 @@
         android:paddingTop="20dp"
         android:gravity="center"
         android:textColor="@color/gray"
+        android:visibility="gone"
         android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/ratingBar6"
