--- a/app/src/main/res/layout/viewholder_wishlist.xml
+++ b/app/src/main/res/layout/viewholder_wishlist.xml
@@ -21,16 +21,18 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
         android:ellipsize="end"
         android:fontFamily="@font/montserrat_medium"
         android:text="Title"
         android:textColor="@color/black"
         android:textSize="17dp"
-        android:clickable="true"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,11 +52,11 @@
         android:id="@+id/imageButton"
         android:layout_width="60dp"
         android:layout_height="50dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/round_button"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView5"
         app:srcCompat="@drawable/wishlisted" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
