--- a/app/src/main/res/layout/viewholder_insert_rating.xml
+++ b/app/src/main/res/layout/viewholder_insert_rating.xml
@@ -24,24 +24,24 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
-        android:stepSize="1.0"
         android:numStars="5"
-        app:layout_constraintTop_toBottomOf="@id/tvReviewTitle"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:stepSize="1.0"
+        app:layout_constraintStart_toStartOf="@id/tvReviewTitle"
+        app:layout_constraintTop_toBottomOf="@id/tvReviewTitle" />
 
     <EditText
         android:id="@+id/etReview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/montserrat_medium"
         android:hint="Type your review here..."
         android:padding="8dp"
-        android:layout_marginStart="12dp"
         android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginEnd="16dp"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/ratingBar"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/ratingBar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
