--- a/app/src/main/res/layout/activity_history_ongoing.xml
+++ b/app/src/main/res/layout/activity_history_ongoing.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
@@ -40,198 +41,215 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <TextView
-        android:id="@+id/tvOrderTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Order Title"
-        android:textSize="18sp"
-        android:layout_marginTop="8dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        app:layout_constraintTop_toBottomOf="@id/constraintLayout2"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout2">
 
-    <TextView
-        android:id="@+id/tvOrderStatus"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Order Status"
-        android:textSize="14sp"
-        android:textColor="@color/gray"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tvOrderTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvAddressTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Address"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tvOrderStatus"
-        app:layout_constraintStart_toStartOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvAddressContent"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Recipient's address will appear here."
-        android:layout_marginTop="8dp"
-        android:textSize="14sp"
-        android:fontFamily="@font/montserrat_medium"
-        app:layout_constraintTop_toBottomOf="@id/tvAddressTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+                <TextView
+                    android:id="@+id/tvOrderTitle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Order Title"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvItemsTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Item(s)"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tvAddressContent"
-        app:layout_constraintStart_toStartOf="parent" />
+                <TextView
+                    android:id="@+id/tvOrderStatus"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Order Status"
+                    android:textColor="@color/gray"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="@id/tvOrderTitle"
+                    app:layout_constraintTop_toBottomOf="@id/tvOrderTitle" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvItems"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tvItemsTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+                <TextView
+                    android:id="@+id/tvAddressTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Address"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="@id/tvOrderStatus"
+                    app:layout_constraintTop_toBottomOf="@id/tvOrderStatus" />
 
-    <TextView
-        android:id="@+id/tvItemsSelectedLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Quantity of Item(s):"
-        android:textSize="14sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/rvItems"
-        app:layout_constraintStart_toStartOf="parent" />
+                <TextView
+                    android:id="@+id/tvAddressContent"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Recipient's address will appear here."
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="@+id/tvAddressTitle"
+                    app:layout_constraintTop_toBottomOf="@id/tvAddressTitle" />
 
-    <TextView
-        android:id="@+id/tvItemsSelectedValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="14sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        app:layout_constraintTop_toTopOf="@id/tvItemsSelectedLabel"
-        app:layout_constraintEnd_toEndOf="parent" />
+                <TextView
+                    android:id="@+id/tvItemsTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Item(s)"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="@+id/tvAddressContent"
+                    app:layout_constraintTop_toBottomOf="@id/tvAddressContent" />
 
-    <TextView
-        android:id="@+id/tvItemsTotalLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Item(s) Total:"
-        android:textSize="14sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tvItemsSelectedLabel"
-        app:layout_constraintStart_toStartOf="parent" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvItems"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@+id/tvItemsTitle"
+                    app:layout_constraintTop_toBottomOf="@+id/tvItemsTitle" />
 
-    <TextView
-        android:id="@+id/tvItemsTotalValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="14sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        app:layout_constraintTop_toTopOf="@id/tvItemsTotalLabel"
-        app:layout_constraintEnd_toEndOf="parent" />
+                <TextView
+                    android:id="@+id/tvItemsSelectedLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Quantity of Item(s):"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/rvItems" />
 
-    <TextView
-        android:id="@+id/tvShippingFeeLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Shipping Fee:"
-        android:textSize="14sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tvItemsTotalLabel"
-        app:layout_constraintStart_toStartOf="parent" />
+                <TextView
+                    android:id="@+id/tvItemsSelectedValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text=""
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/tvItemsSelectedLabel" />
 
-    <TextView
-        android:id="@+id/tvShippingFeeValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="14sp"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        app:layout_constraintTop_toTopOf="@id/tvShippingFeeLabel"
-        app:layout_constraintEnd_toEndOf="parent" />
+                <TextView
+                    android:id="@+id/tvItemsTotalLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Item(s) Total:"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="@+id/tvItemsSelectedLabel"
+                    app:layout_constraintTop_toBottomOf="@id/tvItemsSelectedLabel" />
 
-    <TextView
-        android:id="@+id/tvTotalsLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Totals:"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tvShippingFeeLabel"
-        app:layout_constraintStart_toStartOf="parent" />
+                <TextView
+                    android:id="@+id/tvItemsTotalValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text=""
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/tvItemsTotalLabel" />
 
-    <TextView
-        android:id="@+id/tvTotalsValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:fontFamily="@font/montserrat_medium"
-        app:layout_constraintTop_toTopOf="@id/tvTotalsLabel"
-        app:layout_constraintEnd_toEndOf="parent" />
+                <TextView
+                    android:id="@+id/tvShippingFeeLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Shipping Fee:"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="@+id/tvItemsTotalLabel"
+                    app:layout_constraintTop_toBottomOf="@id/tvItemsTotalLabel" />
 
-    <Button
-        android:id="@+id/btnReceived"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Order Received"
-        android:backgroundTintMode="src_atop"
-        android:textColor="@color/white"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@id/tvTotalsValue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+                <TextView
+                    android:id="@+id/tvShippingFeeValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text=""
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/tvShippingFeeLabel" />
 
-    <TextView
-        android:id="@+id/tvPaymentPending"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="*Please wait for your payment to be confirmed"
-        android:textColor="@color/gray"
-        android:fontFamily="@font/montserrat_medium"
-        android:layout_marginTop="8dp"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/btnReceived"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+                <TextView
+                    android:id="@+id/tvTotalsLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Totals:"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="@+id/tvShippingFeeLabel"
+                    app:layout_constraintTop_toBottomOf="@id/tvShippingFeeLabel" />
+
+                <TextView
+                    android:id="@+id/tvTotalsValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text=""
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/tvTotalsLabel" />
+
+                <Button
+                    android:id="@+id/btnReceived"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginBottom="64dp"
+                    android:backgroundTintMode="src_atop"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Order Received"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvTotalsLabel" />
+
+                <TextView
+                    android:id="@+id/tvPaymentPending"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="*Please wait for your payment to be confirmed"
+                    android:textColor="@color/gray"
+                    android:visibility="gone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btnReceived" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
