Fix History and Search

--- a/app/src/main/res/layout/fragment_completed.xml
+++ b/app/src/main/res/layout/fragment_completed.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nothing to show here.\nYou don't have any completed orders."
+        android:visibility="gone"
         android:textSize="16sp"
         android:gravity="center"
         android:textColor="@color/gray"
